@@ -14,6 +14,7 @@ import org.mockito.Mock;
 import org.mockito.Spy;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.data.domain.*;
+import org.springframework.data.jpa.domain.Specification;
 
 import java.lang.reflect.Type;
 import java.util.Collections;
@@ -40,22 +41,27 @@ class RacksServiceTest {
 
     @BeforeEach
     void setUp() {
+
         racks = new Racks();
-        racks.setIdentifier("R1");
+        racks.setIdentifier("RACK1");
         racks.setStatus(true);
         racks.setDeleted(false);
 
         racksDto = new RacksDto();
-        racksDto.setIdentifier("R1");
+        racksDto.setIdentifier("RACK1");
     }
 
-    // ✅ FIND ALL (Pagination)
     @Test
     void testFindAll() {
-        Pageable pageable = PageRequest.of(0, 10);
-        Page<Racks> page = new PageImpl<>(Collections.singletonList(racks));
 
-        when(racksRepository.findByDeletedFalse(pageable)).thenReturn(page);
+        Pageable pageable = PageRequest.of(0, 10);
+
+        Page<Racks> page =
+                new PageImpl<>(Collections.singletonList(racks));
+
+        when(racksRepository.findByDeletedFalse(pageable))
+                .thenReturn(page);
+
         when(modelMapper.map(any(), any(Type.class)))
                 .thenReturn(Collections.singletonList(racksDto));
 
@@ -66,24 +72,55 @@ class RacksServiceTest {
         assertEquals(1, result.getTotalRecords());
     }
 
-    // ✅ SAVE - NEW RACK
     @Test
-    void testSave_NewRacks() {
-        when(racksRepository.findByIdentifier("R1")).thenReturn(null);
-        when(modelMapper.map(racksDto, Racks.class)).thenReturn(racks);
+    void testFindAllWithSpecification() {
 
-        doNothing().when(racksService).setAuditFields(racks, true);
+        Pageable pageable = PageRequest.of(0, 10);
+
+        @SuppressWarnings("unchecked")
+        Specification<Racks> specification =
+                mock(Specification.class);
+
+        Page<Racks> page =
+                new PageImpl<>(Collections.singletonList(racks));
+
+        when(racksRepository.findAll(specification, pageable))
+                .thenReturn(page);
+
+        when(modelMapper.map(any(), any(Type.class)))
+                .thenReturn(Collections.singletonList(racksDto));
+
+        WsDto<RacksDto> result =
+                racksService.findAll(specification, pageable);
+
+        assertNotNull(result);
+        assertEquals(1, result.getDtoList().size());
+
+        verify(racksRepository)
+                .findAll(specification, pageable);
+    }
+
+    @Test
+    void testSave_NewRack() {
+
+        when(racksRepository.findByIdentifier("RACK1"))
+                .thenReturn(null);
+
+        when(modelMapper.map(racksDto, Racks.class))
+                .thenReturn(racks);
 
         RacksDto result = racksService.save(racksDto);
 
         assertNotNull(result);
+
         verify(racksRepository).save(racks);
     }
 
-    // ✅ SAVE - ALREADY EXISTS
     @Test
     void testSave_AlreadyExists() {
-        when(racksRepository.findByIdentifier("R1")).thenReturn(racks);
+
+        when(racksRepository.findByIdentifier("RACK1"))
+                .thenReturn(racks);
 
         RacksDto result = racksService.save(racksDto);
 
@@ -91,12 +128,13 @@ class RacksServiceTest {
         assertTrue(result.getMessage().contains("already exists"));
     }
 
-    // ✅ SAVE - SOFT DELETED
     @Test
     void testSave_SoftDeleted() {
+
         racks.setDeleted(true);
 
-        when(racksRepository.findByIdentifier("R1")).thenReturn(racks);
+        when(racksRepository.findByIdentifier("RACK1"))
+                .thenReturn(racks);
 
         RacksDto result = racksService.save(racksDto);
 
@@ -104,72 +142,99 @@ class RacksServiceTest {
         assertTrue(result.getMessage().contains("soft deleted"));
     }
 
-    // ✅ DELETE
     @Test
     void testDelete() {
-        when(racksRepository.findByIdentifier("R1")).thenReturn(racks);
 
-        doNothing().when(racksService).softDelete(racks);
-        doNothing().when(racksService).setAuditFields(racks, false);
+        when(racksRepository.findByIdentifier("RACK1"))
+                .thenReturn(racks);
 
-        racksService.delete("R1");
+        racksService.delete("RACK1");
+
+        assertTrue(racks.isDeleted());
+        assertFalse(racks.isStatus());
 
         verify(racksRepository).save(racks);
     }
 
-    // ✅ FIND BY IDENTIFIER
     @Test
     void testFindByIdentifier() {
-        when(racksRepository.findByIdentifier("R1")).thenReturn(racks);
-        when(modelMapper.map(racks, RacksDto.class)).thenReturn(racksDto);
 
-        RacksDto result = racksService.findByIdentifier("R1");
+        when(racksRepository.findByIdentifier("RACK1"))
+                .thenReturn(racks);
+
+        when(modelMapper.map(racks, RacksDto.class))
+                .thenReturn(racksDto);
+
+        RacksDto result =
+                racksService.findByIdentifier("RACK1");
 
         assertNotNull(result);
+        assertEquals("RACK1", result.getIdentifier());
     }
 
-    // ✅ UPDATE
     @Test
     void testUpdate() {
-        when(racksRepository.findByIdentifier("R1")).thenReturn(racks);
 
-        doNothing().when(modelMapper).map(racksDto, racks);
-        doNothing().when(racksService).setAuditFields(racks, false);
+        when(racksRepository.findByIdentifier("RACK1"))
+                .thenReturn(racks);
+
+        doNothing().when(modelMapper)
+                .map(racksDto, racks);
 
         RacksDto result = racksService.update(racksDto);
 
         assertNotNull(result);
+
         verify(racksRepository).save(racks);
     }
 
-    // ✅ CHANGE TOGGLE STATUS
     @Test
     void testChangeToggleStatus() {
-        when(racksRepository.findByIdentifier("R1")).thenReturn(racks);
-        when(modelMapper.map(racks, RacksDto.class)).thenReturn(racksDto);
 
-        RacksDto result = racksService.changeToggleStatus("R1", false);
+        when(racksRepository.findByIdentifier("RACK1"))
+                .thenReturn(racks);
+
+        when(modelMapper.map(racks, RacksDto.class))
+                .thenReturn(racksDto);
+
+        RacksDto result =
+                racksService.changeToggleStatus("RACK1", false);
 
         assertNotNull(result);
         assertFalse(racks.isStatus());
+
         verify(racksRepository).save(racks);
     }
 
-    // ✅ FIND ACTIVE STATUS
+    @Test
+    void testChangeToggleStatus_RackNotFound() {
+
+        when(racksRepository.findByIdentifier("RACK1"))
+                .thenReturn(null);
+
+        when(modelMapper.map(null, RacksDto.class))
+                .thenReturn(null);
+
+        RacksDto result =
+                racksService.changeToggleStatus("RACK1", false);
+
+        assertNull(result);
+    }
+
     @Test
     void testFindActiveStatus() {
-        racks.setStatus(true);
 
-        Racks inactive = new Racks();
-        inactive.setStatus(false);
+        Racks inactiveRack = new Racks();
+        inactiveRack.setStatus(false);
 
-        List<Racks> racksList = List.of(racks, inactive);
+        when(racksRepository.findAll())
+                .thenReturn(List.of(racks, inactiveRack));
 
-        when(racksRepository.findAll()).thenReturn(racksList);
         when(modelMapper.map(any(), any(Type.class)))
-                .thenReturn(Collections.singletonList(racksDto));
+                .thenReturn(List.of(racksDto));
 
-        List<RacksDto> result = racksService.findActiveStatus();
+        List<RacksDto> result =
+                racksService.findActiveStatus();
 
         assertNotNull(result);
         assertEquals(1, result.size());
